# archnote

./: README.md  pyproject.toml  urology_workflow.py
archnote/cli/: format_note.py
archnote/formatter/: __init__.py  agent.py  dates.py  note_editor.py  sections.py
archnote/prompts/: clinical_note_template.md
archnote/web/: __init__.py  app.py
archnote/web/static/: style.css
archnote/web/templates/: index.html
scripts/: run_web.sh
tests/: test_formatter.py
