[project]
name = "archnote"
version = "0.1.0"
description = "Tools for normalizing and formatting clinical notes."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.22",
]

[project.scripts]
archnote-format = "archnote.cli.format_note:main"
archnote-serve = "archnote.web.app:main"

[project.optional-dependencies]
deploy = [
    "uvicorn[standard]>=0.22",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
